Added CONTACT Section (HTML + styles + jQuery Validate Plugin)

--- a/css/style.css
+++ b/css/style.css
@@ -1446,3 +1446,134 @@ body {
     font-size: 18px;
   }
 }
+
+/* line 3, ../sass/parts/_contact.scss */
+.contact {
+  padding: 70px 0 140px;
+  background: url(../img/contact-background.jpg) no-repeat center/cover;
+  order: 7;
+}
+@media screen and (max-width: 700px) {
+  /* line 3, ../sass/parts/_contact.scss */
+  .contact {
+    padding: 35px 0 70px;
+  }
+}
+/* line 12, ../sass/parts/_contact.scss */
+.contact-title {
+  color: #5a5957;
+  font-family: "Playfair Display";
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 30px;
+  text-transform: uppercase;
+  text-align: center;
+  position: relative;
+  margin-bottom: 50px;
+}
+@media screen and (max-width: 1200px) {
+  /* line 12, ../sass/parts/_contact.scss */
+  .contact-title {
+    margin-bottom: 30px;
+  }
+}
+/* line 27, ../sass/parts/_contact.scss */
+.contact-title:after {
+  position: absolute;
+  content: "";
+  bottom: -10px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 62px;
+  height: 3px;
+  background-color: #d07c7c;
+}
+/* line 40, ../sass/parts/_contact.scss */
+.contact-desc {
+  color: #848282;
+  font-family: Raleway;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 18px;
+  text-align: center;
+  margin-bottom: 50px;
+}
+@media screen and (max-width: 1200px) {
+  /* line 40, ../sass/parts/_contact.scss */
+  .contact-desc {
+    margin-bottom: 30px;
+  }
+}
+/* line 56, ../sass/parts/_contact.scss */
+.contact-form button {
+  display: block;
+  margin: 15px auto 0;
+  padding: 20px 50px;
+  min-width: 200px;
+  border: 2px solid #d07c7c;
+  outline: 0;
+  background-color: inherit;
+  color: #d07c7c;
+  font-family: Raleway;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 700;
+  text-transform: uppercase;
+  cursor: pointer;
+  -moz-transition: all,linear .3s;
+  -o-transition: all,linear .3s;
+  -webkit-transition: all,linear .3s;
+  transition: all,linear .3s;
+}
+/* line 76, ../sass/parts/_contact.scss */
+.contact-form button:hover, .contact-form button:active, .contact-form button:focus {
+  background-color: #d07c7c;
+  color: #ffffff;
+}
+/* line 82, ../sass/parts/_contact.scss */
+.contact-form label {
+  display: block;
+  position: relative;
+  margin-bottom: 15px;
+}
+/* line 87, ../sass/parts/_contact.scss */
+.contact-form label input, .contact-form label textarea {
+  width: 100%;
+  padding: 10px 10px 10px 30px;
+  outline: 0;
+  border: 2px solid #d07c7c;
+  background-color: inherit;
+  color: #848282;
+  font-family: Raleway;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 18px;
+}
+/* line 100, ../sass/parts/_contact.scss */
+.contact-form label input {
+  min-height: 50px;
+}
+/* line 104, ../sass/parts/_contact.scss */
+.contact-form label textarea {
+  min-height: 150px;
+  padding-top: 15px;
+  max-width: 100%;
+  min-width: 100%;
+}
+/* line 111, ../sass/parts/_contact.scss */
+.contact-form label .fa {
+  position: absolute;
+  top: 18px;
+  left: 10px;
+  color: #848282;
+}
+/* line 118, ../sass/parts/_contact.scss */
+.contact-form label.js-error {
+  background-color: #d07c7c;
+  color: #fff;
+  width: fit-content;
+  padding: 10px;
+  margin-top: 5px;
+  font-size: 12px;
+}
