Optimalization #1 - Fixed order of the properties

--- a/sass/parts/_default.scss
+++ b/sass/parts/_default.scss
@@ -1,11 +1,9 @@
-/****************************************************************************
-VARIABLES DEFAULT
-****************************************************************************/
+// VARIABLES DEFAULT
 
-/* FONT FAMILY */
-/* FONT WEIGHT */
-/* COLORS */
-/* SIZES */
+// FONT FAMILY
+// FONT WEIGHT
+// COLORS
+// SIZES
 
 body {
     display: flex;
