--- a/sass/parts/_fonts.scss
+++ b/sass/parts/_fonts.scss
@@ -1,7 +1,4 @@
-/****************************************************************************
-FONTS DECLARATION
-****************************************************************************/
+// FONTS DECLARATION
 
-/* FONTS */
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,400,600,700');
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700');
