--- a/sass/parts/_menubar.scss
+++ b/sass/parts/_menubar.scss
@@ -1,19 +1,24 @@
 // MENUBAR
 
 .menubar {
-    position: relative;
-    height: 55px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+    height: 55px;
     border-bottom: 1px solid #ebebeb;
+    order: 2;
     
     @include breakpoint(700px) {
         order: 1;
     }
 
     &-logo {
+        display: block;
         margin-left: 55px;
+        width: 93px;
+        height: 18px;
+        background: url(../img/logo-short-dark.png) no-repeat;
         
         @include breakpoint(1200px) {
             margin-left: 0;    
@@ -29,10 +34,10 @@
             width: 100%;
             left: 0;
             right: 0;
+            padding: 15px 0;
+            background-color: rgba(208, 124, 124, 0.8);
             text-align: center;
             z-index: 99;
-            background-color: rgba(208, 124, 124, 0.8);
-            padding: 15px 0;
         }
         
         &.toggle {
@@ -62,8 +67,8 @@
             }
             
             a {
-                position: relative;
                 display: block;
+                position: relative;
                 color: #696969;
                 font-family: Raleway;
                 font-size: 13px;
@@ -78,7 +83,6 @@
                     font-size: 18px;
                     line-height: 24px;
                     
-                    
                     &:hover, &:active, &:focus {
                         color: #000;
                         font-weight: 700;
@@ -89,12 +93,12 @@
             &.active a:after, a:hover:after {
                 position: absolute;
                 content: "";
-                width: 100%;
-                height: 2px;
-                background-color: #d07c7c;
                 bottom: -5px;
                 left: 0;
                 right: 0;
+                width: 100%;
+                height: 2px;
+                background-color: #d07c7c;
                 
                 @include breakpoint(700px) {
                     display: none;
@@ -105,8 +109,8 @@
     
     &-togglemenu {
         display: block;
-        padding: 0;
         margin: 0;
+        padding: 0;
         border: 0;
         outline: 0;
         background-color: inherit;
