--- a/sass/parts/_works.scss
+++ b/sass/parts/_works.scss
@@ -1,10 +1,7 @@
 // WORKS
 
 .works {
-      
-    @include breakpoint(700px) {
-        order: 4;
-    }
+    order: 4;
     
     &-title {
         position: relative;
@@ -12,8 +9,8 @@
         color: #5a5957;
         font-family: "Playfair Display";
         font-size: 25px;
-        font-weight: 400;
         line-height: 30px;
+        font-weight: 400;
         text-transform: uppercase;
         text-align: center;
         
@@ -37,8 +34,8 @@
     &-posts {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-gap: 25px;
         grid-auto-rows: minmax(370px, auto);
+        grid-gap: 25px;
         
         @include breakpoint(1200px) {
             grid-gap: 15px;
@@ -49,9 +46,9 @@
         }
         
         @include breakpoint(700px) {
-            grid-gap: 10px;
             grid-template-columns: repeat(1, 1fr);
             grid-auto-rows: minmax(300px, auto);
+            grid-gap: 10px;
         }
         
         .works-singlepost {
@@ -62,11 +59,11 @@
             position: relative;
             height: 100%;
             background: no-repeat center / cover;
-            color: #ffffff;
+            color: #fff;
             font-family: Raleway;
             font-size: 14px;
-            font-weight: 400;
             line-height: 18px;
+            font-weight: 400;
             text-align: center;
             text-decoration: none;
             cursor: pointer;
@@ -88,7 +85,7 @@
                 &:hover {
                     &:after {
                         position: absolute;
-                        content:"";
+                        content: "";
                         top: 0;
                         left: 0;
                         right: 0;
@@ -205,10 +202,10 @@
                 position: relative;
                 padding: 10px 50px;
                 z-index: 2;
-                -moz-transition: all,linear .1s;
-                -o-transition: all,linear .1s;
-                -webkit-transition: all,linear .1s;
-                transition: all,linear .1s;
+                -moz-transition: all,linear .3s;
+                -o-transition: all,linear .3s;
+                -webkit-transition: all,linear .3s;
+                transition: all,linear .3s;
                 
                 span {
                     display: block;
@@ -229,7 +226,7 @@
                         margin: 0 auto;
                         width: 100%;
                         height: 2px;
-                        background-color: #ffffff;
+                        background-color: #fff;
                     }
                 }
                 
@@ -274,6 +271,7 @@
         display: block;
         margin: 60px auto 0;
         padding: 20px 50px;
+        min-width: 200px;
         border: 2px solid #d07c7c;
         outline: 0;
         background-color: inherit;
@@ -284,10 +282,18 @@
         font-weight: 700;
         text-transform: uppercase;
         cursor: pointer;
+        -moz-transition: all,linear .3s;
+        -o-transition: all,linear .3s;
+        -webkit-transition: all,linear .3s;
+        transition: all,linear .3s;
         
         &:hover, &:active, &:focus {
             background-color: #d07c7c;
-            color: #ffffff;
+            color: #fff;
+        }
+        
+        @include breakpoint(700px) {
+            margin-top: 30px;
         }
     }
 }
