--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,7 @@
 @import "parts/fonts";
 @import "parts/grid";
 @import "parts/default";
+@import "parts/owl-carousel";
 
 // 3. STYLES
 @import "parts/header";
