--- a/sass/parts/_contact.scss
+++ b/sass/parts/_contact.scss
@@ -84,7 +84,7 @@
             position: relative;
             margin-bottom: 15px;
             
-            input,textarea {
+            input, textarea {
                 padding: 10px 10px 10px 30px;
                 width: 100%;
                 border: 2px solid #d07c7c;
@@ -108,7 +108,7 @@
                 min-height: 150px;
             }
             
-            .fa {
+            .icon {
                 position: absolute;
                 top: 18px;
                 left: 10px;
