--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -9,6 +9,7 @@
     order: 1;
     
     @include breakpoint(700px) {
+        margin-top: 55px;
         padding: 100px 0px 50px;
         height: 500px;
         order: 2;
@@ -61,7 +62,7 @@
         color: #fff;
         font-family: Raleway;
         font-size: 16px;
-        line-height: 22px;
+        line-height: 20px;
         font-weight: 300;
         
         @include breakpoint(1200px) {
@@ -76,10 +77,15 @@
     }
     
     &-arrow {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         position: absolute;
+        left: 0;
+        right: 0;
         bottom: 125px;
-        margin: 0px;
-        padding: 0px;
+        margin: 0 auto;
+        padding: 0;
         width: 45px;
         height: 45px;
         border: 0;
@@ -89,6 +95,16 @@
         font-size: 20px;
         outline: 0;
         cursor: pointer;
+        text-decoration: none;
+        -moz-transition: all,linear .3s;
+        -o-transition: all,linear .3s;
+        -webkit-transition: all,linear .3s;
+        transition: all,linear .3s;
+        
+        &:hover, &:active, &:focus {
+            background-color: #d07c7c;
+            color: #fff;
+        }
         
         @include breakpoint(700px) {
             bottom: 25px;
