--- a/sass/parts/_menubar.scss
+++ b/sass/parts/_menubar.scss
@@ -10,7 +10,16 @@
     order: 2;
     
     @include breakpoint(700px) {
+        position: fixed;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        padding: 0 10px;
+        width: calc(100% - 20px);
+        border-bottom: 2px solid #869791;
+        background-color: #fff;
         order: 1;
+        z-index: 3;
     }
 
     &-logo {
