--- a/sass/parts/_followme.scss
+++ b/sass/parts/_followme.scss
@@ -30,10 +30,15 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        margin: 60px 0 100px;
+        margin: 60px auto 100px;
+        max-width: 800px;
+        
+        @include breakpoint(1200px) {
+            max-width: 600px;
+        }
         
         @include breakpoint(700px) {
-            margin: 30px 0 50px;
+            margin: 30px auto 50px;
         }
         
         a {
