--- a/sass/parts/_aboutme.scss
+++ b/sass/parts/_aboutme.scss
@@ -1,8 +1,8 @@
 // ABOUT-ME
  
 .aboutme {
-    padding: 140px 0;
-    order: 3;
+    padding: 100px 0;
+    @include order(3);
         
     @include breakpoint(1200px) {
         padding: 70px 0;
@@ -12,37 +12,13 @@
         padding: 50px 0;
     }
     
-    &-title {
-        position: relative;
-        color: #5a5957;
-        font-family: "Playfair Display";
-        font-size: 25px;
-        line-height: 30px;
-        font-weight: 400;
-        text-transform: uppercase;
-        text-align: center;
-        
-        &:after {
-            position: absolute;
-            content: "";
-            bottom: -10px;
-            left: 0;
-            right: 0;
-            margin: 0 auto;
-            width: 62px;
-            height: 3px;
-            background-color: #d07c7c;
-        }
-    }
-        
     &-desc {
-        margin: 60px auto 0;
+        margin: 0 auto;
         max-width: 750px;
-        color: #848282;
-        font-family: Raleway;
-        font-size: 14px;
-        line-height: 26px;
-        font-weight: 300;
+        color: $gray;
+        font-size: $font-normal + 1;
+        line-height: $font-big;
+        font-weight: $light;
         text-align: center;
     }
 }
