--- a/sass/parts/_contact.scss
+++ b/sass/parts/_contact.scss
@@ -3,47 +3,19 @@
 .contact {
     padding: 70px 0 140px;
     background: url(../img/contact-background.jpg) no-repeat center / cover;
-    order: 7;
+    @include order(7);
     
     @include breakpoint(700px) {
         padding: 35px 0 70px;
     }
     
-    &-title {
-        position: relative;
-        margin-bottom: 50px;
-        color: #5a5957;
-        font-family: "Playfair Display";
-        font-size: 25px;
-        line-height: 30px;
-        font-weight: 400;
-        text-transform: uppercase;
-        text-align: center;
-        
-        @include breakpoint(1200px) {
-            margin-bottom: 30px;
-        }
-        
-        &:after {
-            position: absolute;
-            content: "";
-            bottom: -10px;
-            left: 0;
-            right: 0;
-            margin: 0 auto;
-            width: 62px;
-            height: 3px;
-            background-color: #d07c7c;
-        }
-    }
-    
     &-desc {
         margin-bottom: 50px;
-        color: #848282;
-        font-family: Raleway;
-        font-size: 14px;
-        line-height: 18px;
-        font-weight: 300;
+        color: $gray;
+        font-family: $raleway;
+        font-size: $font-normal + 1;
+        line-height: $font-medium;
+        font-weight: $light;
         text-align: center;
         
         @include breakpoint(1200px) {
@@ -53,33 +25,27 @@
     
     &-form {
         
-        button {
+        .contact-button {
             display: block;
             margin: 15px auto 0;
             padding: 20px 50px;
             min-width: 200px;
-            border: 2px solid #d07c7c;
-            outline: 0;
+            border: 2px solid $pink;
             background-color: inherit;
-            color: #d07c7c;
-            font-family: Raleway;
-            font-size: 16px;
-            line-height: 18px;
-            font-weight: 700;
+            color: $pink;
+            font-family: $raleway;
+            font-size: $font-medium - 2;
+            line-height: $font-medium;
+            font-weight: $bold;
             text-transform: uppercase;
-            cursor: pointer;
-            -moz-transition: all,linear .3s;
-            -o-transition: all,linear .3s;
-            -webkit-transition: all,linear .3s;
-            transition: all,linear .3s;
 
             &:hover, &:active, &:focus {
-                background-color: #d07c7c;
-                color: #ffffff;
+                background-color: $pink;
+                color: $white;
             }
         }
         
-        label {
+        .contact-label {
             display: block;
             position: relative;
             margin-bottom: 15px;
@@ -87,14 +53,13 @@
             input, textarea {
                 padding: 10px 10px 10px 30px;
                 width: 100%;
-                border: 2px solid #d07c7c;
+                border: 2px solid $pink;
                 outline: 0;
                 background-color: inherit;
-                color: #848282;
-                font-family: Raleway;
-                font-size: 13px;
-                line-height: 18px;
-                font-weight: 400;
+                color: $gray;
+                font-family: $raleway;
+                font-size: $font-normal;
+                line-height: $font-medium;
             }
             
             input {
@@ -112,16 +77,17 @@
                 position: absolute;
                 top: 18px;
                 left: 10px;
-                color: #848282;
+                color: $gray;
             }
             
-            &.js-error {
+            label.js-error {
+                display: block;
                 margin-top: 5px;
                 padding: 10px;
                 width: fit-content;
-                background-color: #d07c7c;
-                color: #fff;
-                font-size: 12px;
+                background-color: $pink;
+                color: $white;
+                font-size: $font-normal - 1;
             }
         }
     }
