--- a/sass/parts/_default.scss
+++ b/sass/parts/_default.scss
@@ -1,23 +1,40 @@
 // VARIABLES DEFAULT
 
 // FONT FAMILY
+$playfair: "Playfair Display";
+$raleway: "Raleway";
+
 // FONT WEIGHT
+$light: 300;
+$normal: 400;
+$bold: 700;
+
 // COLORS
+$white: #fff;
+$black: #000;
+$pink: #d07c7c;
+$gray: #848282;
+$darkgray: #5a5957;
+
 // SIZES
+$font-small: 11px;
+$font-normal: 13px;
+$font-medium: 18px;
+$font-big: 26px;
 
 body {
-    display: flex;
-    flex-direction: column;
+    @include display-flex;
+    @include flex-direction(column);
     position: relative;
     margin: 0px auto;
     padding: 0 25px;
     max-width: 1920px;
-    background-color: #fff;
-    color: #000;
-    font-family: Raleway;
-    font-size: 13px;
+    background-color: $white;
+    color: $black;
+    font-family: $raleway;
+    font-size: $font-normal;
     line-height: 100%;
-    font-weight: 400;
+    font-weight: $normal;
     overflow-x: hidden;
     
     @include breakpoint(1200px) {
@@ -29,35 +46,85 @@ body {
     }
 }
 
-.button-back {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    bottom: 15px;
-    right: 15px;
-    margin: 0px;
-    padding: 0px;
-    width: 45px;
-    height: 45px;
-    border: 0;
-    border-radius: 50%;
-    background-color: #d07c7c;
-    color: #fff;
-    font-size: 20px;
+.btn {
+    @include display-flex;
+    @include justify-content(center);
+    @include align-items(center);
+    margin: 0;
+    padding: 0;
     outline: 0;
+    border: 0;
     cursor: pointer;
-    z-index: 5;
     text-decoration: none;
-    transform: rotate(180deg);
-    -moz-transition: all,linear .3s;
-    -o-transition: all,linear .3s;
-    -webkit-transition: all,linear .3s;
-    transition: all,linear .3s;
+    @include transition(all, linear .3s);
     
-    &:hover, &:active, &:focus {
-        background-color: #fff;
-        color: #d07c7c;
-        border: 2px solid #d07c7c;
+    &-back {
+        position: fixed;
+        bottom: 15px;
+        right: 15px;
+        width: 45px;
+        height: 45px;
+        @include border-radius(50%);
+        background-color: $pink;
+        color: $white;
+        font-size: $font-medium + 2;
+        z-index: 5;
+        transform: rotate(180deg);
+
+        &:hover, &:active, &:focus {
+            background-color: $white;
+            color: $pink;
+            border: 2px solid $pink;
+        }
+    }
+    
+    &-down {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 125px;
+        margin: 0 auto;
+        width: 45px;
+        height: 45px;
+        @include border-radius(50%);
+        background-color: $white;
+        color: $pink;
+        font-size: $font-medium + 2;
+        
+        &:hover, &:active, &:focus {
+            background-color: $pink;
+            color: $white;
+        }
+        
+        @include breakpoint(700px) {
+            bottom: 25px;
+        }
+    }
+}
+
+.title {
+    position: relative;
+    margin-bottom: 70px;
+    color: $darkgray;
+    font-family: $playfair;
+    font-size: $font-big - 1;
+    line-height: $font-big + 4;
+    text-transform: uppercase;
+    text-align: center;
+    
+    @include breakpoint(1200px) {
+        margin-bottom: 35px;
+    }
+    
+    &:after {
+        position: absolute;
+        content: "";
+        bottom: -10px;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        width: 62px;
+        height: 3px;
+        background-color: $pink;
     }
 }
