--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -1,6 +1,8 @@
 // HEADER
 
 .header {
+    @include order(1);
+    
     position: relative;
     padding: 170px 0px 70px;
     height: 660px;
@@ -9,18 +11,19 @@
     background-size: cover;
     background-image: url(../img/header-background-1870px.jpg);
     text-align: center;
-    order: 1;
+    
     
     @include breakpoint(1200px) {
         background-image: url(../img/header-background-1200px.jpg);
     }
     
     @include breakpoint(700px) {
+        @include order(2);
+        
         margin-top: 55px;
         padding: 100px 0px 50px;
         height: 500px;
         background-image: url(../img/header-background-700px.jpg);
-        order: 2;
     }
     
     @include breakpoint(400px) {
@@ -39,11 +42,10 @@
     &-title {
         position: relative;
         margin-top: 50px;
-        color: #fff;
-        font-family: "Playfair Display";
+        color: $white;
+        font-family: $playfair;
         font-size: 48px;
         line-height: 58px;
-        font-weight: 400;
         
         @include breakpoint(1200px) {
             font-size: 36px;
@@ -64,62 +66,26 @@
             margin: 0px auto;
             width: 80px;
             height: 3px;
-            background-color: #fff;
+            background-color: $white;
         }
     }
     
     &-desc {
         margin: 60px auto 0px;
         max-width: 450px;
-        color: #fff;
-        font-family: Raleway;
-        font-size: 16px;
-        line-height: 20px;
-        font-weight: 300;
+        color: $white;
+        font-size: $font-medium - 2;
+        line-height: $font-medium + 2;
+        font-weight: $light;
         
         @include breakpoint(1200px) {
-            font-size: 14px;
-            line-height: 18px;
+            font-size: $font-normal + 1;
+            line-height: $font-medium;
         }
         
         @include breakpoint(700px) {
-            font-size: 13px;
-            line-height: 16px;
-        }
-    }
-    
-    &-arrow {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 125px;
-        margin: 0 auto;
-        padding: 0;
-        width: 45px;
-        height: 45px;
-        border: 0;
-        border-radius: 50%;
-        background-color: #fff;
-        color: #d07c7c;
-        font-size: 20px;
-        outline: 0;
-        cursor: pointer;
-        text-decoration: none;
-        -moz-transition: all,linear .3s;
-        -o-transition: all,linear .3s;
-        -webkit-transition: all,linear .3s;
-        transition: all,linear .3s;
-        
-        &:hover, &:active, &:focus {
-            background-color: #d07c7c;
-            color: #fff;
-        }
-        
-        @include breakpoint(700px) {
-            bottom: 25px;
+            font-size: $font-normal;
+            line-height: $font-normal + 3;
         }
     }
 }
