--- a/sass/parts/_reviews.scss
+++ b/sass/parts/_reviews.scss
@@ -1,9 +1,10 @@
 // REVIEWS
 
 .reviews {
-    padding: 140px 0;
+    @include order(5);
+    
+    padding: 100px 0;
     text-align: center;
-    order: 5;
         
     @include breakpoint(1200px) {
         padding: 70px 0;
@@ -13,26 +14,8 @@
         padding: 50px 0;
     }
     
-    &-title {
-        position: relative;
-        margin-bottom: 70px;
-        color: #848282;
-        font-family: "Playfair Display";
-        font-size: 25px;
-        line-height: 30px;
-        font-weight: 400;
-        
-        &:after {
-            position: absolute;
-            content: "";
-            bottom: -10px;
-            left: 0;
-            right: 0;
-            margin: 0 auto;
-            width: 62px;
-            height: 3px;
-            background-color: #d07c7c;
-        }
+    .title {
+        text-transform: none;
     }
     
     &-slider {
@@ -40,39 +23,39 @@
         .slide-quote {
             margin: 0 auto 25px;
             max-width: 600px;
-            color: #848282;
-            font-family: Raleway;
-            font-size: 18px;
-            line-height: 24px;
-            font-weight: 300;
+            color: $gray;
+            font-family: $raleway;
+            font-size: $font-medium;
+            line-height: $font-big - 2;
+            font-weight: $light;
             font-style: italic;
             
             @include breakpoint(1200px) {
-                font-size: 16px;
-                line-height: 20px;
+                font-size: $font-medium - 2;
+                line-height: $font-medium + 2;
             }
             
             @include breakpoint(700px) {
-                font-size: 13px;
-                line-height: 16px;
+                font-size: $font-normal;
+                line-height: $font-normal + 3;
             }
         }
         
         .slide-author {
-            color: #a0a0a0;
-            font-family: Raleway;
-            font-size: 14px;
-            line-height: 18px;
-            font-weight: 300;
+            color: $gray;
+            font-family: $raleway;
+            font-size: $font-normal + 1;
+            line-height: $font-medium;
+            font-weight: $light;
             
             @include breakpoint(1200px) {
-                font-size: 13px;
-                line-height: 16px;
+                font-size: $font-normal;
+                line-height: $font-normal + 3;
             }
             
             @include breakpoint(700px) {
-                font-size: 12px;
-                line-height: 14px;
+                font-size: $font-normal - 1;
+                line-height: $font-normal + 1;
             }
         }
         
@@ -80,7 +63,7 @@
             outline: 0;
             
             &.active span, &:hover span {
-                background-color: #d07c7c; 
+                background-color: $pink; 
             }
         }
         
