--- a/sass/parts/_video.scss
+++ b/sass/parts/_video.scss
@@ -1,13 +1,14 @@
 // VIDEO
 
 .video {
+    @include order(6);
+    
     display: block;
     position: relative;
     width: 100%;
     height: 0;
     margin-bottom: 140px;
     padding-top: 56.25%;
-    order: 6;
     
     @include breakpoint(1200px) {
         margin-bottom: 70px;
