--- a/sass/parts/_works.scss
+++ b/sass/parts/_works.scss
@@ -1,41 +1,14 @@
 // WORKS
 
 .works {
-    order: 4;
-    
-    &-title {
-        position: relative;
-        margin-bottom: 70px;
-        color: #5a5957;
-        font-family: "Playfair Display";
-        font-size: 25px;
-        line-height: 30px;
-        font-weight: 400;
-        text-transform: uppercase;
-        text-align: center;
-        
-        @include breakpoint(1200px) {
-            margin-bottom: 35px;
-        }
-        
-        &:after {
-            position: absolute;
-            content: "";
-            bottom: -10px;
-            left: 0;
-            right: 0;
-            margin: 0 auto;
-            width: 62px;
-            height: 3px;
-            background-color: #d07c7c;
-        }
-    }
-    
+    @include order(4);
+   
     &-posts {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-auto-rows: minmax(370px, auto);
         grid-gap: 25px;
+        margin-bottom: 60px;
         
         @include breakpoint(1200px) {
             grid-gap: 15px;
@@ -49,21 +22,23 @@
             grid-template-columns: repeat(1, 1fr);
             grid-auto-rows: minmax(300px, auto);
             grid-gap: 10px;
+            margin-bottom: 30px;
         }
         
         .works-singlepost {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
+            @include display-flex;
+            @include justify-content(center);
+            @include align-items(center);
+            @include flex-direction(column);
+            
             position: relative;
             height: 100%;
             background: no-repeat center / cover;
-            color: #fff;
-            font-family: Raleway;
-            font-size: 14px;
-            line-height: 18px;
-            font-weight: 400;
+            color: $white;
+            font-family: $raleway;
+            font-size: $font-normal + 1;
+            line-height: $font-medium;
+            font-weight: $normal;
             text-align: center;
             text-decoration: none;
             cursor: pointer;
@@ -199,22 +174,20 @@
             }
 
             .inner {
+                @include transition(all, linear .3s);
+                
                 position: relative;
                 padding: 10px 50px;
                 z-index: 2;
-                -moz-transition: all,linear .3s;
-                -o-transition: all,linear .3s;
-                -webkit-transition: all,linear .3s;
-                transition: all,linear .3s;
+                
                 
                 span {
                     display: block;
                     position: relative;
                     margin-bottom: 20px;
-                    font-family: "Playfair Display";
-                    font-size: 25px;
-                    line-height: 30px;
-                    font-weight: 400;
+                    font-family: $playfair;
+                    font-size: $font-big - 1;
+                    line-height: $font-big + 5;
                     text-transform: uppercase;
                     
                     &::after {
@@ -226,7 +199,7 @@
                         margin: 0 auto;
                         width: 100%;
                         height: 2px;
-                        background-color: #fff;
+                        background-color: $white;
                     }
                 }
                 
@@ -238,29 +211,29 @@
                     &.top-left {
                         left: 0;
                         top: 0;
-                        border-left: 2px solid #fff;
-                        border-top: 2px solid #fff;
+                        border-left: 2px solid $white;
+                        border-top: 2px solid $white;
                     }
                     
                     &.top-right {
                         right: 0;
                         top: 0;
-                        border-right: 2px solid #fff;
-                        border-top: 2px solid #fff;
+                        border-right: 2px solid $white;
+                        border-top: 2px solid $white;
                     }
                     
                     &.bottom-left {
                         left: 0;
                         bottom: 0;
-                        border-left: 2px solid #fff;
-                        border-bottom: 2px solid #fff;
+                        border-left: 2px solid $white;
+                        border-bottom: 2px solid $white;
                     }
                     
                     &.bottom-right {
                         right: 0;
                         bottom: 0;
-                        border-right: 2px solid #fff;
-                        border-bottom: 2px solid #fff;
+                        border-right: 2px solid $white;
+                        border-bottom: 2px solid $white;
                     }
                 }
             }
@@ -269,31 +242,21 @@
     
     &-button {
         display: block;
-        margin: 60px auto 0;
+        margin: 0 auto;
         padding: 20px 50px;
         min-width: 200px;
-        border: 2px solid #d07c7c;
-        outline: 0;
+        border: 2px solid $pink;
         background-color: inherit;
-        color: #d07c7c;
-        font-family: Raleway;
-        font-size: 16px;
-        line-height: 18px;
-        font-weight: 700;
+        color: $pink;
+        font-family: $raleway;
+        font-size: $font-medium - 2;
+        line-height: $font-medium;
+        font-weight: $bold;
         text-transform: uppercase;
-        cursor: pointer;
-        -moz-transition: all,linear .3s;
-        -o-transition: all,linear .3s;
-        -webkit-transition: all,linear .3s;
-        transition: all,linear .3s;
         
         &:hover, &:active, &:focus {
-            background-color: #d07c7c;
-            color: #fff;
-        }
-        
-        @include breakpoint(700px) {
-            margin-top: 30px;
+            background-color: $pink;
+            color: $white;
         }
     }
 }
